Tests/good/general/core000.lat
string addTwo(string str1,string str2){
    string str3 = str1+str2;
    return str3;
}
int main(){
    string str1 ="abc";
    string str2 ="efg";
    string str3 = addTwo(str1,str2);
    printString(str3);
    return 0;
}