Tests/bad/myBadTests/mainIncorrectReturnType.lat

int foo(){
    return 1;
}

void main(){

    return 0;
}